--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -6,10 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style-sheet.css">
     <title>Methods for Adding CSS</title>
+    <style>
+      p{
+        color: white;
+        background-color: green;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: larger;
+      }
+    </style>
   </head>
   <body>
     <div>Style me via the external method!</div>
     <p>I would like to be styled with the internal method, please.</p>
-    <button>Inline Method</button>
+    <button style="font-size:larger;background-color:orange;">Inline Method</button>
   </body>
 </html>
